Add tests for FormulaDescription class